--- a/src/app/books/books-list/books-list.component.html
+++ b/src/app/books/books-list/books-list.component.html
@@ -6,35 +6,35 @@
     <!-- idBook Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.id_book}}</td>
+      <td mat-cell *matCellDef="let element">{{element.id_book}}</td>
     </ng-container>
 
     <!-- Title Column -->
     <ng-container matColumnDef="title">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Title</th>
-      <td mat-cell *matCellDef="let row">{{row.title}}</td>
+      <td mat-cell *matCellDef="let element">{{element.title}}</td>
     </ng-container>
 
     <!-- Author Column -->
     <ng-container matColumnDef="author">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Author</th>
-      <td mat-cell *matCellDef="let row">{{row.author}}</td>
+      <td mat-cell *matCellDef="let element">{{element.author}}</td>
     </ng-container>
 
     <!-- Category Column -->
     <ng-container matColumnDef="category">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Category</th>
-      <td mat-cell *matCellDef="let row">{{row.category}}</td>
+      <td mat-cell *matCellDef="let element">{{element.category}}</td>
     </ng-container>
 
     <!-- Description Column -->
     <ng-container matColumnDef="description">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
-      <td mat-cell *matCellDef="let row">{{row.description}}</td>
+      <td mat-cell *matCellDef="let element">{{element.description}}</td>
     </ng-container>
 
     <ng-container matColumnDef="favourites">
-      <th mat-header-cell  *matHeaderCellDef > Favourites </th>
+      <th mat-header-cell *matHeaderCellDef > Favourites </th>
       <td mat-cell *matCellDef="let element" >
         <button mat-button *ngIf="!checkIsFavourite(element.id_book)" (click)="addToFavourites(element.id_book); $event.stopPropagation()">Add to favourites</button>
         <button mat-button *ngIf="checkIsFavourite(element.id_book)" (click)="removeFromFavourites(element.id_book); $event.stopPropagation()">Remove from favourites</button>
