--- a/src/app/main-navigation/main-navigation.component.html
+++ b/src/app/main-navigation/main-navigation.component.html
@@ -11,7 +11,7 @@
       <a mat-list-item routerLink="books/myBooks" *ngIf="isLoggedUser">My Books</a>
       <a mat-list-item routerLink="conversations" *ngIf="isLoggedUser">Messages</a>
       <a mat-list-item routerLink="users">Users</a>
-      <a mat-list-item routerLink="users/profile">My profile</a>
+      <a mat-list-item routerLink="users/profile" *ngIf="isLoggedUser">My profile</a>
       <a mat-list-item routerLink="contact">Contact</a>
       <a mat-list-item routerLink="reports" *ngIf="isAdmin()">Reports</a>
       <a mat-list-item routerLink="account/login" *ngIf="!isLoggedUser">Log In</a>
