--- a/src/app/reports/reports-list/reports-list.component.html
+++ b/src/app/reports/reports-list/reports-list.component.html
@@ -10,7 +10,7 @@
     <!-- username Column -->
     <ng-container matColumnDef="reporter">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Reporting user</th>
-      <td mat-cell *matCellDef="let row">{{row.username}}</td>
+      <td mat-cell *matCellDef="let row">{{row.reporter}}</td>
     </ng-container>
 
     <!-- city Column -->
@@ -25,8 +25,15 @@
       <td mat-cell *matCellDef="let row">{{row.date | date: 'yyyy/mm/dd'}}</td>
     </ng-container>
 
+    <ng-container matColumnDef="delete">
+      <th mat-header-cell *matHeaderCellDef > Delete report </th>
+      <td mat-cell *matCellDef="let element" >
+        <button mat-button (click)="deleteReport(element.idReport); $event.stopPropagation()"> Delete </button>
+      </td>
+    </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" [routerLink]="getUserLink(row.user)"></tr>
+    <tr mat-row *matRowDef="let element; columns: displayedColumns;" [routerLink]="getUserLink(element.user)"></tr>
   </table>
 
   <mat-paginator #paginator
