--- a/src/app/books/book-details/book-details.component.html
+++ b/src/app/books/book-details/book-details.component.html
@@ -16,7 +16,7 @@
     <input matInput type="text" value="{{getDetails()?.description}}" readonly>  <!-- [errorStateMatcher]="matcher" -->
   </mat-form-field> <br/>
 
-
+<!--//tu jest error-->
   <mat-form-field appearance="fill">
     <mat-label>Book's isbn code: </mat-label>
     <input matInput type="text" *ngIf="getDetails()?.isbn" value="{{getDetails()?.isbn}}" readonly>
