--- a/src/app/users/users-list/users-list.component.html
+++ b/src/app/users/users-list/users-list.component.html
@@ -88,7 +88,7 @@
         [length]="dataSource?.data.length"
         [pageIndex]="0"
         [pageSize]="50"
-        [pageSizeOptions]="[25, 50, 100, 250]">
+        [pageSizeOptions]="[10, 25, 50]">
     </mat-paginator>
   </div>
 
